<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_login"
        app:showAsAction="never"
        android:orderInCategory="100"
        android:title="@string/action_login"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:actionViewClass="android.widget.SearchView"
        />
    <item
        android:id="@+id/action_add_route"
        app:showAsAction="collapseActionView|ifRoom"
        android:icon="@drawable/ic_action_add_route"
        android:orderInCategory="100"
        android:title="@string/action_add_route"/>

</menu>
